@@ -7,6 +7,8 @@
 
   * New sort policy 'debsize' for sorting by package size, thanks Marcel Partap
 
+  * Add "Reinstall (shortcut L)" to the package menu (Closes: #633788)
+
 - Bug fixes:
 
   * Do not group packages as tasks based on their name, rather, use their
